# sagarmatha-desktop

./: Makefile.am  README  README.md  autogen.sh  configure.ac
debian/: changelog  control  control.in  libsagarmatha-desktop-dev.install  libsagarmatha-desktop0.install  libsagarmatha-desktop0.symbols  rules
libsagarmatha-desktop/: Makefile.am  gnome-bg.h  gnome-desktop-thumbnail.c  gnome-desktop-utils.c  gnome-rr-config.c  gnome-rr-config.h  gnome-rr-labeler.h  gnome-wall-clock.c  sagarmatha-desktop-uninstalled.pc.in  sagarmatha-desktop.pc.in  sagarmatha-rr-debug.c  test-pnp-ids.c  test-wall-clock.c  test-xkb-info.c
po/: fy.po  ms.po  wa.po
schemas/: Makefile.am  org.sagarmatha.desktop.a11y.applications.gschema.xml.in.in  org.sagarmatha.desktop.a11y.keyboard.gschema.xml.in.in  org.sagarmatha.desktop.a11y.magnifier.gschema.xml.in.in  org.sagarmatha.desktop.a11y.mouse.gschema.xml.in.in  org.sagarmatha.desktop.background.gschema.xml.in.in  org.sagarmatha.desktop.default-applications.gschema.xml.in.in  org.sagarmatha.desktop.input-sources.gschema.xml.in.in  org.sagarmatha.desktop.interface.gschema.xml.in.in  org.sagarmatha.desktop.lockdown.gschema.xml.in.in  org.sagarmatha.desktop.media-handling.gschema.xml.in.in  org.sagarmatha.desktop.screensaver.gschema.xml.in.in  org.sagarmatha.desktop.session.gschema.xml.in.in  org.sagarmatha.desktop.sound.gschema.xml.in.in  org.sagarmatha.desktop.thumbnail-cache.gschema.xml.in.in  org.sagarmatha.desktop.thumbnailers.gschema.xml.in.in  org.sagarmatha.desktop.wm.preferences.gschema.xml.in.in  org.sagarmatha.system.locale.gschema.xml.in.in
